Write cbits to initialise RTS in the foreign library

--- a/SwiftHaskell/haskell-framework/haskell-framework.cabal
+++ b/SwiftHaskell/haskell-framework/haskell-framework.cabal
@@ -41,4 +41,7 @@ foreign-library haskell-foreign-framework
     build-depends: base, haskell-framework
     hs-source-dirs: flib
 
+    include-dirs: cbits
+    c-sources: cbits/MyForeignLibRts.c
+    install-includes: MyForeignLibRts.h
 
