part3: Invocations for Swift compilation

--- a/experiments/Makefile
+++ b/experiments/Makefile
@@ -1,3 +1,9 @@
-.PHONY: Memory.cmm
-Memory.cmm:
-	ghc -fforce-recomp -ddump-cmm Memory.hs > Memory.cmm
+.PHONY: all Memory.cmm Rect.S
+
+all: Memory.cmm Rect.S
+
+Memory.cmm: Memory.hs
+	ghc -fforce-recomp -ddump-cmm $< > $@
+
+Rect.S: Rect.swift
+	swiftc $< -emit-ir -o - | swift demangle > $@
