part3: Unbox integers into datatype

--- a/experiments/Makefile
+++ b/experiments/Makefile
@@ -3,7 +3,7 @@
 all: Memory.cmm Rect.S
 
 Memory.cmm: Memory.hs
-	ghc -fforce-recomp -ddump-cmm $< > $@
+	ghc -O -fforce-recomp -ddump-cmm $< > $@
 
 Rect.S: Rect.swift
 	swiftc $< -emit-ir -o - | swift demangle > $@
